discussion/kv_engine/138524/138524_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: regression test UnregisterTaskablesDeletesTask

Change-Id: Ieefd5a4c36362d8fb2ce08fa6e67808f4ba12fb8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2020-10-20 12:51:09.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-20 17:34:35.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5184/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/tests/module_tests/executorpool_test.cc b/engines/ep/tests/module_tests/executorpool_test.cc
index d0b8c27..a44878a 100644
--- a/engines/ep/tests/module_tests/executorpool_test.cc
+++ b/engines/ep/tests/module_tests/executorpool_test.cc
@@ -190,7 +190,7 @@ TYPED_TEST(ExecutorPoolTest, UnregisterTaskablesDeletesTask) {
                          }),
               deleted(deleted) {
         }
-        ~OnDeleteTask() {
+        ~OnDeleteTask() override {
             std::this_thread::yield();
             deleted = true;
         }
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5184/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/executorpool_test.cc:193:9: warning: annotate this function with "override" or (rarely) "final" [modernize-use-override]
        ~OnDeleteTask() {
        ^
                        override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/executorpool_test.cc:193:24: note: FIX-IT applied suggested code changes
        ~OnDeleteTask() {
                       ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/tests/module_tests/executorpool_test.cc b/engines/ep/tests/module_tests/executorpool_test.cc
index d0b8c27..a44878a 100644
--- a/engines/ep/tests/module_tests/executorpool_test.cc
+++ b/engines/ep/tests/module_tests/executorpool_test.cc
@@ -190,7 +190,7 @@ TYPED_TEST(ExecutorPoolTest, UnregisterTaskablesDeletesTask) {
                          }),
               deleted(deleted) {
         }
-        ~OnDeleteTask() {
+        ~OnDeleteTask() override {
             std::this_thread::yield();
             deleted = true;
         }
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5184/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31251/ : FAILURE

Failure of GoogleTest "ExecutorPoolTest/1.UnregisterTaskablesDeletesTask":

<pre>
[ RUN      ] ExecutorPoolTest/1.UnregisterTaskablesDeletesTask
..\kv_engine\engines\ep\tests\module_tests\executorpool_test.cc(215): error: Value of: deleted
  Actual: false
Expected: true
Task should be deleted when unregisterTaskable returns
[  FAILED  ] ExecutorPoolTest/1.UnregisterTaskablesDeletesTask, where TypeParam = class FollyExecutorPool (5 ms)
ExecutorPoolTest/1.UnregisterTaskablesDeletesTask
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31251/ )

Failure of a CTest test  75/393 Test  #75: ep-engine_ep_unit_tests.ExecutorPoolTest/class FollyExecutorPool .............................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31251/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14433/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5584/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0077/0158]: disk>RAM delete paged-out...../kv_engine/engines/ep/tests/ep_testsuite.cc:4368 Test failed: `" (Expected `0", got `1" - Unexpected bg_fetched after del/get)
[2020-10-20T15:36:17.712Z] (117 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5584/ )

Failure of a CTest test [2020-10-20T15:36:17.712Z]  33/407 Test #243: ep_testsuite.full_eviction.rocksdb ..........................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5584/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3713/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26982/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6790/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6511/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6632/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-01-15 16:42:43.000000000
Message: 
Set Work In Progress
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-15 16:58:54.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32959/ : FAILURE

Compile error at ..\kv_engine\utilities\config_parser.cc(181): error C3861: "strcasecmp": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32959/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8094/ : FAILURE

Compile error at [2021-01-15T16:54:58.823Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1183:18:
error: no matching function for call to ?compact(Db&, const char*, couchstore_open_flags&, CouchKVStore::compactDBInternal(std::unique_lock<std::mutex>&, CompactionContext*)::<lambda(Db&, DocInfo*, sized_buf)>, <brace-enclosed initializer list>, FileOpsInterface*&, CouchKVStore::compactDBInternal(std::unique_lock<std::mutex>&, CompactionContext*)::<lambda(Db&)>, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep, CouchKVStore::compactDBInternal(std::unique_lock<std::mutex>&, CompactionContext*)::<lambda(Db&)>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8094/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8219/ : FAILURE

Compile error at [2021-01-15T16:54:22.293Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1183:18:
error: no matching function for call to ?compact(Db&, const char*, couchstore_open_flags&, CouchKVStore::compactDBInternal(std::unique_lock<std::mutex>&, CompactionContext*)::<lambda(Db&, DocInfo*, sized_buf)>, <brace-enclosed initializer list>, FileOpsInterface*&, CouchKVStore::compactDBInternal(std::unique_lock<std::mutex>&, CompactionContext*)::<lambda(Db&)>, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep, std::chrono::duration<long int, std::ratio<1, 1000000000> >::rep, CouchKVStore::compactDBInternal(std::unique_lock<std::mutex>&, CompactionContext*)::<lambda(Db&)>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8219/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8481/ : FAILURE

Compile error at [2021-01-15T16:55:51.946Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1148:19:
error: no matching function for call to "compact"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8481/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16032/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7183/ : FAILURE

Compile error at [2021-01-15T16:46:30.093Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1148:19:
error: no matching function for call to "compact"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7183/ )'
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-05-07 14:16:36.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
